# qclocks

./: .gitignore  CMakeLists.txt  README.md  cliff.toml  partitions.csv  sdkconfig.defaults
.github/workflows/: release.yml
components/app_controller/: CMakeLists.txt  app_controller.cpp  app_controller.hpp
components/clock_engine/: CMakeLists.txt  clock_engine.cpp  clock_engine.hpp  clock_rules.cpp  clock_rules.hpp
components/common/: CMakeLists.txt  app_events.hpp  app_types.hpp  error_codes.hpp
components/diagnostics_service/: CMakeLists.txt  diagnostics_service.cpp  diagnostics_service.hpp
components/led_renderer/: CMakeLists.txt  led_effects.cpp  led_effects.hpp  led_renderer.cpp  led_renderer.hpp
components/ota_service/: CMakeLists.txt  ota_service.cpp  ota_service.hpp
components/provisioning_service/: CMakeLists.txt  provisioning_service.cpp  provisioning_service.hpp
components/settings_store/: CMakeLists.txt  settings_model.hpp  settings_store.cpp  settings_store.hpp
components/time_service/: CMakeLists.txt  time_service.cpp  time_service.hpp
components/wifi_service/: CMakeLists.txt  wifi_service.cpp  wifi_service.hpp
components/word_layout/: CMakeLists.txt  led_index_map.hpp  word_layout.cpp  word_layout.hpp  word_tokens.hpp
doc/: esp32c6_word_clock_sw_spec.md
main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/clock_engine/: test_clock_engine.cpp
tests/word_layout/: test_word_layout.cpp
tools/: dev_flash.ps1  provision.ps1  set_wifi.ps1
